--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </td>
       <td style="padding:4px 8px;width:70%;vertical-align:middle">
         <!-- <a href="https://your-paper-link.com"> -->
-          <span class="papertitle">Eureka for Manipulation: Real-World Dexterous Agent via Large-Scale Reinforcement Learning</span>
+          <span class="papertitle">Eureka for Manipulation: LLM-Guided Digital Twin Refinement for Large-Scale Dexterous Reinforcement Learning</span>
         </a>
         <br>
         
@@ -186,7 +186,7 @@
         </video>
       </td>
       <td style="padding:4px 8px;width:70%;vertical-align:middle">
-        <!-- <a href="https://your-paper-link.com"> --> 
+        <a href="https://ieeexplore.ieee.org/document/11128034"> 
           <span class="papertitle">Ambient Flow Perception of Freely Swimming Robotic Fish  Using an Artificial Lateral Line System</span>
         </a>
         <br>
